# whatsinthepantry

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
backend/: Dockerfile  build.sh  database.py  recipe.py  recipe_database.py  run.sh  server.py
backend/src/: database.py  ingredient.py  recipe.py  recipe_manager.py  server.py
backend/test/: test_api.py  test_create.py  test_database.py
