[project]
name = "whatsinthepantry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.11",
    "isort>=6.0.1",
    "ruff>=0.11.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    "__pypackages__"
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

